--- a/基础物理/杨振宁/第七讲.md
+++ b/基础物理/杨振宁/第七讲.md
@@ -1,18 +1,22 @@
 
+### 书籍推荐
 
-First of all, I want to thank the whole class. Then I talked to them. They hope that I can have a chance to talk to you in class. So I want to choose two times. I want to talk to Professor Ruan and Professor An about when is the best time to give you two extra lectures.（首先，我要感谢全班同学。然后我和他们谈了谈。他们希望我能有机会在课堂上和你们交流。所以我打算选两个时间。我想和阮教授、安教授商量一下，什么时候最适合给你们加两节课。）
+杨老推荐的书籍清单如下：
 
-I'll tell you when we are ready. I also asked them... Is he unable to come in? I also asked them... I told them that there are some books that you can read in class. They said that there is a problem. Because those books can be borrowed. If you borrow them, 120 people have borrowed them. So you can't read them.（等我们准备好了我会告诉你。我还问过他们……他是不是不能来？我还问过他们……我告诉他们有些书可以在课堂上阅读。他们说有问题。因为这些书可以外借。如果借出去的话，已经有120个人借过了。所以你们不能读这些书。）
-
-I think the only way to make up for it is to write a few more books. A few more books. Maybe you can read some of them. Let me introduce them to you. The first book is Seagrey. He wrote a book. I don't know the name of the book. From Falling Bodies, etc. There is a book in the school library. I don't remember if it is translated or original. Seagrey is an important physicist. He is about 20 years older than me.（我想唯一的弥补方式就是多写几本书。再多写几本。也许你能读其中的一些。让我来介绍一下。第一本是西格雷的书。他写了一本书。我不记得书名了。从《落体》等等。学校图书馆里有一本。我不记得是译本还是原著。西格雷是一位重要的物理学家。他大概比我大20岁。）
-
-* Emilio Segrè：From Falling Bodies to Radio Waves: Classical Physicists and Their Discoveries
-* E.T.Bell：Men of Mathematics.
-* G. Gamow：Mr. Tompkins
+* Emilio Segrè：From Falling Bodies to Radio Waves: Classical Physicists and Their Discoveries（从落体运动到无线电波：经典物理学家及其发现）
+* E.T.Bell：Men of Mathematics.（数学大师）
+* G. Gamow：Mr. Tompkins（汤普金斯先生）
 * James D. Watson：Double Helix
 *  Abraham Pais：Subtle is the Lord
 
-He followed Fermi in the 1930s. Enrico Fermi is one of the greatest physicists of the 20th century. Before Fermi, Italian physics was not very popular. Fermi led a few people. They did a series of experiments in the 1930s. It is very important. These experiments are called Slow Neutrons. It is very easy for slow neutrons to cause nuclear reactions. This is their big discovery.（20世纪30年代，他追随费米的脚步。恩里科·费米是20世纪最伟大的物理学家之一。在费米之前，意大利物理学并不十分出名。费米带领少数人，在30年代进行了一系列重要实验，这些被称为"慢中子"的实验意义重大——他们发现慢中子极易引发核反应，这是他们的重大发现。）
+
+First of all, I want to thank the whole class. Then I talked to them. They hope that I can have a chance to talk to you in class. So I want to choose two times. I want to talk to Professor Ruan and Professor An about when is the best time to give you two extra lectures.（首先，我要感谢全班同学。然后我和他们谈了谈。他们希望我能有机会在课堂上和你们交流。所以我打算选两个时间。我想和阮教授、安教授商量一下，什么时候最适合给你们加两节课。）
+
+I'll tell you when we are ready. I also asked them... Is he unable to come in? I also asked them... I told them that there are some books that you can read in class. They said that there is a problem. Because those books can be borrowed. If you borrow them, 120 people have borrowed them. So you can't read them.（等我们准备好了我会告诉你。我还问过他们……他是不是不能来？我还问过他们……我告诉他们有些书可以在课堂上阅读。他们说有问题。因为这些书可以外借。如果借出去的话，已经有 120 个人借过了。所以你们不能读这些书。）
+
+I think the only way to make up for it is to write a few more books. A few more books. Maybe you can read some of them. Let me introduce them to you. The first book is Seagrey. He wrote a book. I don't know the name of the book. From Falling Bodies, etc. There is a book in the school library. I don't remember if it is translated or original. Seagrey is an important physicist. He is about 20 years older than me.（我想唯一的弥补方式就是多推荐几本书，也许你能读其中的一些。让我来介绍一下。第一本是西格雷的书。他写了一本书。我不记得书名了。从落体等等。学校图书馆里有一本。我不记得是译本还是原著。西格雷是一位重要的物理学家。他大概比我大 20 岁。）
+
+He followed Fermi in the 1930s. Enrico Fermi is one of the greatest physicists of the 20th century. Before Fermi, Italian physics was not very popular. Fermi led a few people. They did a series of experiments in the 1930s. It is very important. These experiments are called Slow Neutrons. It is very easy for slow neutrons to cause nuclear reactions. This is their big discovery.（20 世纪 30 年代，他追随费米的脚步。恩里科·费米是 20 世纪最伟大的物理学家之一。在费米之前，意大利物理学并不十分出名。费米带领少数人，在 30 年代进行了一系列重要实验，这些被称为"慢中子"的实验意义重大——他们发现慢中子极易引发核反应，这是他们的重大发现。）
 
 Seagrey was one of Fermi's group. I can tell you an important story. I don't know if this story is in the book. In Italy, a professor of physics is appointed by the Ministry of Education. Not like here. For example, there is a professor of physics from Tsinghua University.（Segrè 是费米小组的一员。我可以告诉你一个重要的故事。我不知道这本书里是否有这个故事。在意大利，物理学教授是由教育部任命的。不像这里。比如，有一位来自清华大学的物理学教授。）
 
@@ -20,33 +24,35 @@ In the United States, there is also a professor of physics from Stony Brook Univ
 
 Sicily is a big island. It is a beautiful place. But the university of Palermo was not famous. Seagrey was appointed to become a professor at Palermo. He was very disappointed. He spent several years there and that was a time when he was unhappy. But during that time, he visited Berkeley, California. Berkeley at that time had the world's largest cyclotron. In a cyclotron, you accelerate particles.（西西里岛是一个大岛。这里风景优美，但巴勒莫大学并不出名。西格雷被任命为巴勒莫大学教授时非常失望。他在那里度过了几年郁郁寡欢的时光。不过在此期间，他造访了加利福尼亚的伯克利分校——当时那里拥有世界上最大的回旋加速器。回旋加速器正是用来加速粒子的装置。）
 
-Then you use those particles like alpha particles to hit a nucleus. Then there are fragments and you study the fragments. After you do it for, let's say, six months, the body that is hit becomes very radioactive. In those days, they didn't pay attention, so they just put it in the corner and put a new target in there. So when Seagrey visited Berkeley, he found a pile of discarded targets there. He was very intelligent.（然后你用这些粒子，比如α粒子，去轰击一个原子核。接着会产生碎片，你就研究这些碎片。假设你这样做六个月后，被轰击的物质会变得极具放射性。那时候人们并不在意，所以就把它们扔在角落里，换上新的靶材。所以当西格雷访问伯克利时，他发现那里堆着一堆废弃的靶材。他非常聪明。）
+Then you use those particles like alpha particles to hit a nucleus. Then there are fragments and you study the fragments. After you do it for, let's say, six months, the body that is hit becomes very radioactive. In those days, they didn't pay attention, so they just put it in the corner and put a new target in there. So when Seagrey visited Berkeley, he found a pile of discarded targets there. He was very intelligent.（然后你用这些粒子，比如 $α$ 粒子，去轰击一个原子核。接着会产生碎片，你就研究这些碎片。假设你这样做六个月后，被轰击的物质会变得极具放射性。那时候人们并不在意，所以就把它们扔在角落里，换上新的靶材。所以当西格雷访问伯克利时，他发现那里堆着一堆废弃的靶材。他非常聪明。）
 
-He went to Lawrence, who was the director. He said, you have all these used targets. Could I have a piece? Lawrence said, sure. So he took a piece back to Palermo, and there he made an analysis and he found element 43. If you remember, Mondelez had this periodic table, and at the beginning of the 20th century, it was filled up, but there were a few vacancies because nobody had found those elements. And Seagrey went back.（他去找了劳伦斯，就是那位主管。他说，你们有这么多用过的靶材，能给我一块吗？劳伦斯说，当然可以。于是他带了一块回巴勒莫，在那里做了分析，发现了43号元素。如果你还记得，门德列夫有张元素周期表，20世纪初时已经填满了大部分，但还有几个空缺因为没人发现那些元素。而西格雷回去后……）
+He went to Lawrence, who was the director. He said, you have all these used targets. Could I have a piece? Lawrence said, sure. So he took a piece back to Palermo, and there he made an analysis and he found element 43. If you remember, Mondelez had this periodic table, and at the beginning of the 20th century, it was filled up, but there were a few vacancies because nobody had found those elements. And Seagrey went back.（他去找了劳伦斯，就是那位主管。他说，你们有这么多用过的靶材，能给我一块吗？劳伦斯说，当然可以。于是他带了一块回巴勒莫，在那里做了分析，发现了 43 号元素。如果你还记得，门德列夫有张元素周期表，20 世纪初时已经填满了大部分，但还有几个空缺，因为没人发现那些元素。而西格雷回去后……）
 
-Element 43 was not natural. There's no natural substance with 43, but in cyclotron, it's artificially created, and so he found it. So that was what made him a very distinguished physicist. This is a very interesting story. What it means is that in the frontiers, you have all kinds of opportunities. You have to have a sharp eye, and all these distinguished physicists in Berkeley did not realize that there is something to be found in the pile of used targets, but he had the bright idea.（第43号元素并非天然存在。自然界中没有含有43号元素的物质，但在回旋加速器中，它被人工制造出来，因此他发现了它。正是这一点使他成为一位非常杰出的物理学家。这是一个非常有趣的故事。这意味着在科学前沿，你拥有各种各样的机会。你必须具备敏锐的眼光，而伯克利所有那些杰出的物理学家都没有意识到，在一堆废弃的靶材中可能有所发现，但他却想到了这个绝妙的主意。）
+西格雷在访问伯克利时，从劳伦斯的回旋加速器中获得了一片经过氘核轰击的钼箔。他将这片钼箔带回意大利的巴勒莫大学，与同事卡洛·佩里埃一起通过化学分析，成功分离并鉴定出了新元素——第 43 号元素。他们将其命名为“Technetium”，源自希腊文“τεχνητός”，意为“人造的”，以彰显其人工合成的性质。该元素中文名称为 “锝(de)”
 
-He then went to the United States and did very distinguished work. He was the thesis advisor of Wu Jianxiong. When Wu Jianxiong went to Berkeley to get her PhD, she studied with Seagrey. And then this book was very interesting. I had more or less read it. The next one is E.T. Bell's Men of Mathematics.（随后他去了美国，并做出了非常杰出的工作。他是吴健雄的论文导师。当吴健雄去伯克利攻读博士学位时，她师从西格雷。这本书非常有趣，我或多或少读过一些。下一本是E.T.贝尔的《数学大师》。）
+Element 43 was not natural. There's no natural substance with 43, but in cyclotron, it's artificially created, and so he found it. So that was what made him a very distinguished physicist. This is a very interesting story. What it means is that in the frontiers, you have all kinds of opportunities. You have to have a sharp eye, and all these distinguished physicists in Berkeley did not realize that there is something to be found in the pile of used targets, but he had the bright idea.（第 43 号元素并非天然存在。自然界中没有含有 43 号元素的物质，但在回旋加速器中，它被人工制造出来，因此他发现了它。正是这一点使他成为一位非常杰出的物理学家。这是一个非常有趣的故事。这意味着在科学前沿，你拥有各种各样的机会。你必须具备敏锐的眼光，而伯克利所有那些杰出的物理学家都没有意识到，在一堆废弃的靶材中可能有所发现，但他却想到了这个绝妙的主意。）
 
-E.T. Bell was a professor of mathematics in America, and he wrote this book in the 1920s or 1930s. It's a collection of some 20 short biographies of great mathematicians. It exerted a profound influence. In fact, it influenced me. When I was a freshman in 西南联大, my father, who was a professor of mathematics, borrowed from the library this book. So I began to read it, and it talks about great mathematicians and their contributions.（E.T.贝尔是美国的一位数学教授，他在20世纪20或30年代写了这本书。书中汇集了约20位伟大数学家的简短传记。这本书产生了深远的影响。事实上，它也影响了我。当我还是西南联大的一名新生时，我父亲——他本人也是一位数学教授——从图书馆借来了这本书。于是我开始阅读，书中讲述了伟大数学家们及其贡献的故事。）
+He then went to the United States and did very distinguished work. He was the thesis advisor of Wu Jianxiong. When Wu Jianxiong went to Berkeley to get her PhD, she studied with Seagrey. And then this book was very interesting. I had more or less read it. The next one is E.T. Bell's Men of Mathematics.（随后他去了美国，并做出了非常杰出的工作。他是吴健雄的论文导师。当吴健雄去伯克利攻读博士学位时，她师从西格雷。这本书非常有趣，我或多或少读过一些。下一本是 E.T.贝尔的《数学大师》。）
+
+E.T. Bell was a professor of mathematics in America, and he wrote this book in the 1920s or 1930s. It's a collection of some 20 short biographies of great mathematicians. It exerted a profound influence. In fact, it influenced me. When I was a freshman in 西南联大, my father, who was a professor of mathematics, borrowed from the library this book. So I began to read it, and it talks about great mathematicians and their contributions.（E.T.贝尔是美国的一位数学教授，他在 20 世纪 20 或 30 年代写了这本书。书中汇集了约 20 位伟大数学家的简短传记。这本书产生了深远的影响。事实上，它也影响了我。当我还是西南联大的一名新生时，我父亲——他本人也是一位数学教授——从图书馆借来了这本书。于是我开始阅读，书中讲述了伟大数学家们及其贡献的故事。）
 
 I didn't understand most of the contributions, but the stories were very fascinating. Now, the book was not only famous in China, it was famous all over the world. Now I read that there are people who say that this book is not entirely reliable. In other words, what Bell said about some mathematicians was not entirely reliable. But nevertheless, it was a very interesting book, and it had a profound influence. In particular, there is a chapter about Hamilton.（我对大部分贡献都不太理解，但那些故事非常引人入胜。如今，这本书不仅在中国闻名，更享誉全球。现在我读到有人说这本书并非完全可信，也就是说贝尔对某些数学家的描述并不完全可靠。尽管如此，这仍是一本非常有趣的书，产生了深远的影响。尤其是关于哈密尔顿的那一章。）
 
 Hamilton was a great mathematician and physicist. I told you that he invented the quaternion. And that chapter in E.T. Bell's book about Hamilton was called an Irish tragedy because Hamilton was from Ireland.（汉密尔顿是一位伟大的数学家和物理学家。我告诉过你，他发明了四元数。E.T.贝尔书中关于汉密尔顿的那一章被称为爱尔兰悲剧，因为汉密尔顿来自爱尔兰。）
 
-And E.T. Bell thought that Hamilton's life was a tragedy because in the latter part of Hamilton's life, after he invented the quaternion, he devoted all his efforts to make quaternion the basic mathematics or physics, but unsuccessful. However, I think E.T. Bell is not quite right. I have the feeling, I think I told you a few times ago, I have the feeling that the quaternion will enter into physics in a major way, but not yet.（E.T.贝尔认为汉密尔顿的一生是个悲剧，因为在他生命的后半段，发明四元数之后，他倾尽全力想让四元数成为数学或物理学的基础，但未能成功。然而，我认为E.T.贝尔并不完全正确。我有一种感觉——我想我之前告诉过你几次——我觉得四元数终将以重要方式进入物理学领域，只是时机未到。）
+And E.T. Bell thought that Hamilton's life was a tragedy because in the latter part of Hamilton's life, after he invented the quaternion, he devoted all his efforts to make quaternion the basic mathematics or physics, but unsuccessful. However, I think E.T. Bell is not quite right. I have the feeling, I think I told you a few times ago, I have the feeling that the quaternion will enter into physics in a major way, but not yet.（E.T.贝尔认为汉密尔顿的一生是个悲剧，因为在他生命的后半段，发明四元数之后，他倾尽全力想让四元数成为数学或物理学的基础，但未能成功。然而，我认为 E.T.贝尔并不完全正确。我有一种感觉——我想我之前告诉过你几次——我觉得四元数终将以重要方式进入物理学领域，只是时机未到。）
 
-And that I had written about in my selected papers. If you refer to one of my early lectures, I had said that. The next one is Gamow. Gamow was a distinguished physicist. He was maybe 15 years older than I am. He was a Russian physicist, but he escaped from Stalin's Soviet Union by sailing a boat in the Black Seas.（我在我的论文选集中已经写过这一点。如果你参考我早期的某次演讲，我曾提到过。下一位是伽莫夫。伽莫夫是一位杰出的物理学家。他大概比我年长15岁。他是俄罗斯物理学家，但通过驾驶小船横渡黑海逃离了斯大林的苏联。）
+And that I had written about in my selected papers. If you refer to one of my early lectures, I had said that. The next one is Gamow. Gamow was a distinguished physicist. He was maybe 15 years older than I am. He was a Russian physicist, but he escaped from Stalin's Soviet Union by sailing a boat in the Black Seas.（我在我的论文选集中已经写过这一点。如果你参考我早期的某次演讲，我曾提到过。下一位是伽莫夫。伽莫夫是一位杰出的物理学家。他大概比我年长 15 岁。他是俄罗斯物理学家，但通过驾驶小船横渡黑海逃离了斯大林的苏联。）
 
-And from there he got to America and he settled in America. He was a physicist and astronomer. He had many important contributions. The most important was he was the one who explained the long lifetime of radioactivity in the late 1920s. Many people believe he should have won a Nobel Prize for that. The reason that he didn't win a Nobel Prize is because there were so many important pieces of work.（他从那里去了美国，并在美国定居下来。他是一位物理学家和天文学家，做出了许多重要贡献。其中最重要的是，他在20世纪20年代末解释了放射性物质长寿命的原因。许多人认为他本应因此获得诺贝尔奖。他没有获奖的原因是当时有太多重要的研究成果。）
+And from there he got to America and he settled in America. He was a physicist and astronomer. He had many important contributions. The most important was he was the one who explained the long lifetime of radioactivity in the late 1920s. Many people believe he should have won a Nobel Prize for that. The reason that he didn't win a Nobel Prize is because there were so many important pieces of work.（他从那里去了美国，并在美国定居下来。他是一位物理学家和天文学家，做出了许多重要贡献。其中最重要的是，他在 20 世纪 20 年代末解释了放射性物质长寿命的原因。许多人认为他本应因此获得诺贝尔奖。他没有获奖的原因是当时有太多重要的研究成果。）
 
 So there were many candidates for Nobel Prizes in those days. And as a consequence, he never got it. Most people believe, and I subscribe to that theory, if his contribution were moved to today, he would receive a Nobel Prize. He wrote this book in a very humorous way, and it's a very interesting book. It's about special relativity and quantum mechanics. He was a good friend of Edward Teller, my thesis advisor.（因此，当时诺贝尔奖的候选人很多。结果，他从未获奖。大多数人认为——我也认同这一观点——如果他的贡献放在今天，他一定能获得诺贝尔奖。他以非常幽默的方式写了这本书，内容非常有趣，主要讲述狭义相对论和量子力学。他是我导师爱德华·泰勒的好友。）
 
-And he talked in a very loud voice, and there were many stories about him. He liked to drink. He oftentimes got very drunk. And there's also another thing about him. Namely, you know that with the genetic code, it is three units of the DNA that code one protein. And in the 70s, there was a question of how many units. We now know it's three units. The question at that time was how many units of the DNA codes one protein. And Gamow speculated it's three.（他说话声音很大，关于他的故事也很多。他喜欢喝酒，经常喝得酩酊大醉。关于他还有另一件事。你知道，在遗传密码中，三个DNA单元编码一个蛋白质。在70年代，人们还不清楚具体需要多少个单元。我们现在知道是三个单元。当时的问题是，多少个DNA单元编码一个蛋白质。伽莫夫推测是三个。）
+And he talked in a very loud voice, and there were many stories about him. He liked to drink. He oftentimes got very drunk. And there's also another thing about him. Namely, you know that with the genetic code, it is three units of the DNA that code one protein. And in the 70s, there was a question of how many units. We now know it's three units. The question at that time was how many units of the DNA codes one protein. And Gamow speculated it's three.（他说话声音很大，关于他的故事也很多。他喜欢喝酒，经常喝得酩酊大醉。关于他还有另一件事。你知道，在遗传密码中，三个 DNA 单元编码一个蛋白质。在 70 年代，人们还不清楚具体需要多少个单元。我们现在知道是三个单元。当时的问题是，多少个 DNA 单元编码一个蛋白质。伽莫夫推测是三个。）
 
-That turns out to be correct, but the reason was wrong. What was his reason? His reason was a combinatorial statement. He said that if n units code a protein, and one knows there are four bases, A, C, T, G. So the question is, if you select n things out of four, with repetition allowed, what should n be in order that the number of possibilities is 20? Because he knows there are 20 proteins.（事实证明这是正确的，但理由却是错的。他的理由是什么呢？他的理由是一个组合数学的陈述。他说，如果n个单位编码一个蛋白质，而我们知道有四种碱基：A、C、T、G。那么问题来了：如果从这四种碱基中允许重复地选取n个，n 应该是多少才能使可能的组合数达到20？因为他知道有 20 种蛋白质。）
+That turns out to be correct, but the reason was wrong. What was his reason? His reason was a combinatorial statement. He said that if n units code a protein, and one knows there are four bases, A, C, T, G. So the question is, if you select n things out of four, with repetition allowed, what should n be in order that the number of possibilities is 20? Because he knows there are 20 proteins.（事实证明这是正确的，但理由却是错的。他的理由是什么呢？他的理由是一个组合数学的陈述。他说，如果 n 个单位编码一个蛋白质，而我们知道有四种碱基：A、C、T、G。那么问题来了：如果从这四种碱基中允许重复地选取 n 个，n 应该是多少才能使可能的组合数达到 20？因为他知道有 20 种蛋白质。）
 
-So the question is, out of n DNA units, with the possible repetition of the four, what is n so that the total number of different choices is 20? Now, that's a combinatorial problem. Go back and think about it. It is three. So he wrote that n should be three. We now know three is correct, but it's wrong for two reasons. Reason number one, he did not consider the order of the three.（那么问题来了，在n个DNA单元中，四种碱基可以重复出现的情况下，n取何值时不同的选择总数是20？这是一个组合问题。回过头想想，答案是3。于是他写下n应该等于3。我们现在知道3是正确的，但这个结论错在两点：第一，他没有考虑这三个碱基的排列顺序。）
+So the question is, out of n DNA units, with the possible repetition of the four, what is n so that the total number of different choices is 20? Now, that's a combinatorial problem. Go back and think about it. It is three. So he wrote that n should be three. We now know three is correct, but it's wrong for two reasons. Reason number one, he did not consider the order of the three.（那么问题来了，在 n 个 DNA 单元中，四种碱基可以重复出现的情况下，n取何值时不同的选择总数是20？这是一个组合问题。回过头想想，答案是3。于是他写下n应该等于3。我们现在知道3是正确的，但这个结论错在两点：第一，他没有考虑这三个碱基的排列顺序。）
 
 While the combinatorial problem had no concept about the order of the three DNA units. So that's a mistake, number one. Number two, he thought it's unique that each choice corresponds to one protein, and there are 20 proteins.（虽然组合问题没有关于三个DNA单元顺序的概念。所以这是一个错误，第一点。第二点，他认为每个选择对应一个蛋白质是独特的，而蛋白质有20种。）
 
