--- a/理论物理/任延宇/理论力学.md
+++ b/理论物理/任延宇/理论力学.md
@@ -21,7 +21,7 @@ $$\begin{align}
 \frac{\mathrm{d}{\vec{e}_\theta}}{\mathrm{d}\theta}&=-\cos\theta\vec{i} - \sin\theta \vec{j}=-\vec{e}_r
 \end{align}$$
 
-比方说第一个基本矢量对 $\theta$ 求导的结果很容易求出来，那么观察一下这个结果的话，你会发现这个结果是不是恰好等于第二个基本矢量的分解式。因此原来 $\vec{e}_r$ 对 $\theta$ 的导数恰好等于 $\vec{e}_\theta$；那么同样道理，经过同样的计算，我们发现第二个基本矢量对 $\theta$ 的导数，它恰好等于 $\vec{e}_r$，这样我们就知道了这两个基本矢量随着角度的变化关系。
+比方说第一个基本矢量对 $\theta$ 求导的结果很容易求出来，那么观察一下这个结果的话，你会发现这个结果是不是恰好等于第二个基本矢量的分解式。因此原来 $\vec{e}_r$ 对 $\theta$ 的导数恰好等于 $\vec{e}_\theta$；那么同样道理，经过同样的计算，我们发现第二个基本矢量对 $\theta$ 的导数，它恰好等于 $\vec{e}_r$，这样我们就知道了这两个基本 矢量随着角度的变化关系。
 
 $$\begin{align}
 \dot{\vec{e}_r}&=\frac{\mathrm{d}\vec{e}_r}{\mathrm{d}\theta}\frac{\mathrm{d}\theta}{\mathrm{d}t}=\vec{e}_\theta\dot{\theta} \\[1.2ex]
@@ -34,7 +34,7 @@ $$\begin{align}
 
 对于位置矢量来讲，很显然它只有一个方向，位置矢量跟径向我们规定是一致的，因此位置矢量只有一个方向，就是径向分量，那么它的大小，当然就是这个质点到原点的距离 $r$；
 $$\vec{r}=r\vec{e}_r$$
-那么接下来我们来看速度，速度的定义是位置矢量对时间的导数，那么这个求导大家要稍微小心一点，比笛卡尔坐标系要稍微复杂，我们除了要考虑分量对时间的导数，还不要忘了，现在的基底也将随时间变化，那么接下来第一项我们照抄，第二项我们把基底的导数代换成刚才我们计算的结果，那么经过整理我们发现，对于速度来讲，它在极坐标系下有两个分量，它的径向分量等于距离随时间的变化，此外速度还有一个横向分量，它的大小是 $\vec{r}$ 乘上 $\theta$ 角对时间的导数。$$\vec{v}=\dot{\vec{r}}=\dot{r}\vec{e}_r + r\vec{e}_r=\dot{r}\vec{e}_r+r(\vec{e}_\theta\dot{\theta})$$
+那么接下来我们来看速度，速度的定义是位置矢量对时间的导数，那么这个求导大家要稍微小心一点，比笛卡尔坐标系要稍微复杂，我们除了要考虑分量对时间的导数，还不要忘了，现在的基底也将随时间变化，那么接下来第一项我们照抄，第二项我们把基底的导数代换成刚才我们计算的结果，那么经过整理我们发现，对于速度来讲，它在极坐标系下有两个分量，它的径向分量等于距离随时间的变化，此外速度还有一个横向分量，它的大小是 $\vec{r}$ 乘上 $\theta$ 角对时间的导数。$$\vec{v}=\dot{\vec{r}}=\dot{r}\vec{e}_r + r\dot{\vec{e}_r}=\dot{r}\vec{e}_r+r(\vec{e}_\theta\dot{\theta})$$
 所以$$v_r=\dot{r} \quad v_\theta=r\dot{\theta}$$
 那么接下来来计算加速度，它的整个计算思路其实跟速度是完全一样的，只不过这个公式或者是求导的计算稍微有些复杂，那么这个计算接下来我们来在黑板上得到这个求导的结果，好，我们下面完成平面极坐标系加速度的计算，$$\begin{align}
 \vec{a} = \dot{\vec{v}} &= \frac{\mathrm{d}}{\mathrm{d}t}(\dot{r}\vec{e}_r+r\dot\theta \vec{e}_\theta) \\[1.2ex]
@@ -54,7 +54,7 @@ $$\vec{r}=r\vec{e}_r$$
 那么到这儿，同学们就知道为什么我刚才会把 $a_{\theta}$ 写成这样一个结果，因为从刚才这个图像上来分析的话，现在这个$$a_{\theta}=\frac{2}{r} \frac{\mathrm{d}}{\mathrm{d}t}(\dot{A})$$
 那么被求导的就是这个掠面速率，我们现在得到这样一个形式的话，同学们可以回想一下我们之前在普通物理的力学课上是不是学过一个开普勒定律，大家可以想象一下，如果这个原点指的是太阳，我们现在研究这个质点是太阳系的某颗行星的话，开普勒他给出的所谓第二定律就是行星与太阳的连线在单位时间扫过相同的面积，换句话说行星的掠面速率是一个常量，那么因此带入刚才的结果，也就意味着对于行星来讲，它的掠面速率是一个常量，也就意味着原来行星在横向上的加速度是严格等于 0 的。
 
-因此简单的带入牛顿第二定律，你就可以知道行星所受到的太阳给他的力也是没有任何横向分量的，同学们不妨想一下，如果一个力没有任何横向分量，完全在径向上，显然这是一个有心力，于是据此，人们可以很容易的得到，原来那么大的行星受到的力竟是如此的简单，它始终是指向太阳的这样一个简洁的结果。可以通过平面极坐标系下很容易的得到，如果是笛卡尔坐标系恐怕就要复杂的多了。
+因此简单的带入牛顿第二定律，你就可以知道行星所受到的太阳给他的力也是没有任何横向分量的，同学们不妨想一下，如果一个力没有任何横向分量，完全在径向上，显然这是一个有心力，于是据此，人们可以很容易的得到，原来那么大的行星受到的力竟是如此的简单，它始终是指向太阳的，这样一个简洁的结果，可以通过平面极坐标系下很容易的得到，如果是笛卡尔坐标系恐怕就要复杂的多了。
 
 也正因为如此，人们在遇到有心力的情况下，我们平面极坐标系往往是首选，而且我们都知道有心力是大自然的一种非常基本又非常重要的力，像引力、库仑力等等它都是有心力。在这个时候，平面极坐标系会发挥它很大的作用。
 
