--- a/基础物理/第 1 章、测量.md
+++ b/基础物理/第 1 章、测量.md
@@ -6,14 +6,14 @@
 
 * 1.1.1 识别 SI 单位系统中的基本量。  
 * 1.1.2 说出 SI 单位中最常用的前缀。  
-* 1.1.3 使用链式转换法进行单位（例如长度、面积和体积）转换。  
+* 1.1.3 使用链式法则进行单位（例如长度、面积和体积）转换。  
 * 1.1.4 解释米是如何根据真空中光速定义的。
 
 **关键概念：**
 
 - 物理学是基于物理量的测量。某些物理量被选为基本量（例如长度、时间和质量），每个基本量都有标准定义，并赋予相应的单位（例如米、秒、千克）。其他物理量则基于这些基本量及其标准和单位进行定义。
-- 本书强调的单位系统是国际单位制 (SI)。表 1.1.1 中列出了早期章节所用的三个物理量。国际协定为这些基本量制定了既可访问又不可变的标准，这些标准被用于所有物理测量中，包括基本量及其衍生量。科学记数法和表 1.1.2 中的前缀用于简化测量符号。
-- 单位转换可以通过链式转换法进行，其中原始数据依次乘以作为单位的转换因子，单位像代数量一样操作，直到只剩下所需的单位。
+- 本书强调的单位系统是国际单位制 (SI)。表 1.1.1 中列出了前几个章节所用的三个物理量。国际协定为这些基本量制定了既可访问又不可变的标准，这些标准被用于所有物理测量中，包括基本量及其衍生量。科学记数法和表 1.1.2 中的前缀用于简化测量符号。
+- 单位转换可以通过链式法则进行，其中原始数据依次乘以作为单位的转换因子，单位像代数量一样操作，直到只剩下所需的单位。
 - 米定义为光在精确定义的时间间隔内传播的距离。
 
 ### 什么是物理学？
