--- a/理论物理/任延宇/理论力学.md
+++ b/理论物理/任延宇/理论力学.md
@@ -110,13 +110,35 @@ $$\vec{r}=r\vec{e}_r$$
 
 ## 七、牛顿运动定律
 
-牛顿运动定律
+各位同学们好，这堂课我们来讲著名的牛顿运动定律。提起牛顿的三定律，我想每一个同学都不陌生。 我们不仅在小学中学学过，在我们大一的普通物理力学课里也一定讲过。而在我们的理论力学课里，还要给大家讲牛顿三定律。当然在这里，我们仅就一些容易混淆的概念给同学们一些提示。
 
-各位同学们好 这堂课我们来讲著名的牛顿运动定律 提起牛顿的三定律 我想每一个同学都不陌生 我们不仅在小学中学学过 在我们大一的普通物理力学课里也一定讲过 而在我们的理论力学课里 还要给大家讲牛顿三定律 当然在这里 我们仅就一些容易混淆的概念 给同学们一些提示 那么我们首先来看一下 所谓的牛顿三定律里的第一个 也就是著名的惯性定律 它是说如果一个物体不受外力作用 它将保持静止或者匀速运动状态 换句话说 牛顿第一定律为我们提供了一个参考系 也就是所谓的惯性参考系 以此为基础 牛顿又给出了他的著名的第二定律 这也是我们解题的时候最常用的一个运动定律 那么牛顿第二定律同学们都非常熟悉 那么它的一个直接的表达式 就是F等于ma 在这里 我给出它另外一个更加原本的表示式 因为我们都知道 动量的定义是质量乘上速度 那么把它代入的话 你就可以得到所谓的动量定理 也就是F等于dp比上dt 实际上牛顿他本人一开始在他的原著里 给出的第二定律 就是这样一个形式 只不过后来 人们为了计算起来 更加直接方便一些 更多的采用F等于ma 可是历史告诉我们的是 当人们进入相对论领域时 牛顿他原本的牛顿第二定律 仍然是适用的 可是后来我们经常用的F等于ma 就不能再使用 这也令我们不得不感叹牛顿的伟大之处 那么此外
+那么我们首先来看一下，所谓的牛顿三定律里的第一个，也就是著名的惯性定律。它是说，如果一个物体不受外力作用，它将保持静止或者匀速运动状态。换句话说，牛顿第一定律为我们提供了一个参考系，也就是所谓的惯性参考系。
 
+以此为基础，牛顿又给出了他的著名的第二定律，这也是我们解题的时候最常用的一个运动定律。那么牛顿第二定律，同学们都非常熟悉，它的一个直接的表达式就是$$\vec{F}=m\vec{a}=\frac{\mathrm{d}\vec{P}}{\mathrm{d}t}$$在这里，我要给出它另外一个更加原本的表示式，因为我们都知道，动量的定义是质量乘上速度。那么把它代入的话，你就可以得到所谓的动量定理，也就是 F 等于 dp 比上 dt。实际上，牛顿他本人一开始在他的原著里给出的第二定律，就是这样一个形式。只不过后来，人们为了计算起来更加直接方便一些，更多的采用 F=ma。可是历史告诉我们的是，当人们进入相对论领域时，牛顿他原本的牛顿第二定律仍然是适用的，可是后来我们经常用的 F=ma 就不能再使用，这也令我们不得不感叹牛顿的伟大之处。
 
+那么此外，还需要提醒同学们的是，这个定律它的使用是有前提的，那就是说必须是在惯性系下才能够合理。比方说，如果我们跟着这个物体运动，那么无论如何它也不符合这个牛顿第二定律。那么以上是我们对第二定律的一个说明。
 
+那么请同学们思考一下，尽管它的前提是惯性系，那么我们自然界里究竟有没有惯性系呢？严格来讲是没有的，因为我们都知道一个物体不管它多么孤单，或多或少都会受到其他物体给它的力。那么既然这样一个参考系不存在，牛顿第二定律的前提也就没有了，那么它的意义何在呢？
 
+实际上，目前人们使用的最好的一个，也就是最为近似一个惯性系，它叫所谓的 *FK4 参考系*。 这个 FK4 参考系，是以一千多颗恒星的平均卫星来定义的，当然，我们也只能叫它参考系，它毕竟也不是一个惯性系。那么解决问题这个出路，实际在于我们对于计算问题时，它精度的一个要求。因为我们都知道，通常实际上，我们可以简单的把地球表面就当成一个惯性系，它不会引起特别大的麻烦，因为它的加速度毕竟不大。如果我们本身对这个题目的精度要求比较高，这个时候地球表面可能会稍有问题。即便如此，我们往往也犯不上使用那么一个 FK4 参考系，我们第四章转动坐标系里，会着重来处理这样的问题。
+
+好了，现在有了第一定律和第二定律，我们不妨理顺一下它们俩的关系。为什么要经过这样一个步骤呢？我们同学可以很简单的看出来，第二定律 F=ma，也就意味着它的一个特例是，如果 F=0，那么加速度 a=0，这样第二定律似乎就包含了第一定律。对于物理问题来讲，这个显然是不可以的。那么牛顿意识到了这个问题没有？我想他当然是清楚这一点。实际上，第一定律绝不是第二定律的一个特例，反而是它的前提，也就是说第一定律是万万不可以省去的。其道理就在于，第二定律的前提这个惯性系，正是第一定律来定义的。因此它不但不能省去，一定要放到最前面的位置上。
+
+好了，现在它们俩的关系我们已经捋顺了，那么下一个问题是，我们已经知道了第一定律和第二定律，那么这两个定律能够告诉我们一些什么呢？有同学可能会说，那这两个定律太伟大了，我们可以计算一切的宏观低速的问题。但其实好像没有那么简单。
+
+我举一个例子，比方说，我们现在想用牛顿的前两个定律，来判断一下一个物体，它在运动的时候是否受到了力。同学们可能会觉得，这个问题简直是小菜一碟。根据牛顿第二定律，你观测一下它是否有加速度，如果有加速度，它一定就受到了力。好，我们且不管这个力的大小，我们得反应一下，刚才我们一切的说明和分析，它的前提是牛顿第二定律，而第二定律的前提又是惯性系，而惯性系的前提又是它是否受到了力。那么因此，整个这就是构成了一个逻辑的连环套，也就意味着，实际上这两个著名的定律，连一个物体真正是否受到力，恐怕都难以严格的说清楚，往往还要借助经验的判断
+
+那么同学们不妨想一下，这又是一个严重的问题，牛顿他意识到了吗？我想答案一定是肯定的，牛顿不仅意识到了这个问题，而且他还出色的解决了这个问题。实际上，解决这个问题的方案，就是给出一个基本的力的形式。一旦能够给出这个形式，牛顿的第一定律和第二定律，立刻就变成了威力无穷的武器。那么对此，牛顿他给出的说法，就是给出了著名的万有引力公式。因此我们经常说，是牛顿的三定律和万有引力定律，一起构成了经典物理的基石。
+
+此外，牛顿对于力来讲，还有一个另外的说明，那就是著名的牛顿他的第三定律。也就是说，作用力与反作用力，大小相等，方向相反。如果写成简洁的表达式，就是$$\vec{F}_{12}=-\vec{F}_{21}$$他们俩之间彼此给的力，可以视为是互相等价并抵消的。当然，这个牛顿第三定律，也有它的使用前提，这个前提就是所谓的超距作用。在当时那个年代，人们引入超距作用，在现在看来，是一个不得已的事情。从目前的史料来看，牛顿本人也是反对超距作用，这个可以从他给其他物理学家的信件上反映出来，只不过在当时的科技条件下，人们没有更好的办法。
+
+那么进入法拉第这个年代，他引入了场的概念，人们知道，相互作用的传播，不是超距作用，它是需要时间的。那么这个时间，就是所谓的距离比上光速，最少也要至少是这样一个时间。这也意味着，牛顿的第三定律，在距离相对远的时候，有可能会出现问题。比方说，我有这样两个物体，它们两个彼此，同学们可以假设，有一个力的作用，当我另外一个物体动起来的时候，那么当然，它受到第一个物体给它的力，很显然力会发生变化，但是我们第一个物体，感受到第二个物体由于位置变化，而感应出来的力的变化，这个却需要一个反应时间。因为在它们俩的距离，除上光速这样一个时间段内，它还不知道第二个物体在运动，因此相应它的反应要有一个延迟。
+
+因此这也意味着，在电磁学领域，牛顿的第三定律往往会失效。只不过好在，在我们这门课，同学们可以放心的去使用，因为我们这门课涉及的力，要么是引力，那么牛顿给出引力的形式，是严格的符合它的第三定律的。此外，我们这门课碰到更多的是接触力，本身已经接触上了，相互作用传播，也就不需要时间了。当然，如果进入其他的，比方说电磁学课程，牛顿第三定律不再适用，也没有什么大不了的关系，只要我们把力的形式原原本本的带入就可以了。
+
+那么以上，就是我们对于牛顿三定律的一些说明，希望同学们在以后处理问题的时候，要稍加注意。我们今天的课程就到这里。
+
+## 8、
 
 
 
