--- a/数学物理方法/一、向量分析/1.3 标量积或点积.md
+++ b/数学物理方法/一、向量分析/1.3 标量积或点积.md
@@ -1,7 +1,21 @@
 
 定义了向量之后，我们现在开始对它们进行组合。向量组合的法则必须在数学上保持一致。从这些一致的组合方式中，我们选择了两种在数学和物理上都具有意义的组合方式。第三种组合方式将在第二章中介绍，届时我们将讨论张量的形成。
 
-向量 $\boldsymbol{A}$ 在坐标轴上的投影给出了其在笛卡尔坐标系中的分量（见式 1.4），这定义了 $\boldsymbol{A}$ 与坐标单位向量的标量积的一个特殊几何情形。$$A_{x}=A\cos\alpha\equiv\mathbf{A}\cdot\hat{\mathbf{x}},\quad A_{y}=A\cos\beta\equiv\mathbf{A}\cdot\hat{\mathbf{y}},\quad A_{z}=A\cos\gamma\equiv\mathbf{A}\cdot\hat{\mathbf{z}}\tag{1.22}$$
+向量 $\boldsymbol{A}$ 在坐标轴上的投影给出了其在笛卡尔坐标系中的分量（见式 1.4），这定义了 $\boldsymbol{A}$ 与坐标单位向量的标量积的一个特殊几何情形。$$A_{x}=A\cos\alpha\equiv\mathbf{A}\cdot\hat{\mathbf{x}},\quad A_{y}=A\cos\beta\equiv\mathbf{A}\cdot\hat{\mathbf{y}},\quad A_{z}=A\cos\gamma\equiv\mathbf{A}\cdot\hat{\mathbf{z}}\tag{1.22}$$标量积的这一特例与标量积的一般性质相结合，足以推导出标量积的一般情况。
+
+正如投影在 $\boldsymbol{A}$ 中是线性的，我们希望两个向量的标量积在 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 中也是线性的，即遵循分配律和结合律：$$\begin{align}
+\mathbf{A}\cdot(\mathbf{B}+\mathbf{C})=\mathbf{A}\cdot\mathbf{B}+\mathbf{A}\cdot\mathbf{C}\tag{1.23a} \\[1.2ex]
+\mathbf{A}\cdot(y\mathbf{B})=(y\mathbf{A})\cdot\mathbf{B}=y\mathbf{A}\cdot\mathbf{B}\tag{1.23b}
+\end{align}$$其中 $y$ 是一个数字。现在我们可以根据方程（1.5）将 $\boldsymbol{B}$ 分解为其笛卡尔分量，即 $\mathbf{B}=B_{x}\hat{\mathbf{x}}+B_{y}\hat{\mathbf{y}}+B_{z}\hat{\mathbf{z}}$，从而构造向量 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 的一般标量积或点积。$$\begin{align}
+\mathbf{A} \cdot \mathbf{B}&=\mathbf{A} \cdot\left(B_{x} \hat{\mathbf{x}}+B_{y} \hat{\mathbf{y}}+B_{z} \hat{\mathbf{z}}\right) \\[1.2ex]
+&=B_{x}\mathbf{A} \cdot \hat{\mathbf{x}}+B_{y}\mathbf{A} \cdot \hat{\mathbf{y}}+B_{z}\mathbf{A} \cdot \hat{\mathbf{z}} \quad \text { upon applying Eqs. (1.23a) and (1.23b) } \\[1.2ex]
+&=B_{x} A_{x}+B_{y} A_{y}+B_{z} A_{z} \quad \text { upon substituting Eq. (1.22). }
+\end{align}$$
+因此$$\mathbf{A} \cdot \mathbf{B} \equiv \sum_{i} B_{i} A_{i}=\sum_{i} A_{i} B_{i}=\mathbf{B} \cdot \mathbf{A} .\tag{1.24}$$如果在方程（1.24）中 $\boldsymbol{A}=\boldsymbol{B}$，那么我们可以从方程（1.24）中恢复出方程（1.6）中 $\boldsymbol{A}$ 的大小 $A=\left( \sum A_{i}^2 \right)^{1/2}$。
+
+由式 (1.24) 可知，标量积对 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 的处理方式相同，或者说在 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 之间是对称的，并且是可交换的。因此，我们也可以采用另一种等价的方式：首先将式 (1.22) 推广为向量 $\boldsymbol{A}$ 在非零向量 $\boldsymbol{B}$ 方向上的投影 $A_B = A \cos θ ≡ \boldsymbol{A} \cdot \hat{\boldsymbol{B}}$，其中 $\hat{\boldsymbol{B}}=\frac{\boldsymbol{B}}{B}$ 是 $\boldsymbol{B}$ 方向的单位向量，$θ$ 是 $\boldsymbol{A}$ 与 $\boldsymbol{B}$ 之间的夹角，如图 1.7 所示。同理，我们将 $\boldsymbol{B}$ 投影到 $\boldsymbol{A}$ 上得到 $B_A = B \cos θ ≡ \boldsymbol{B} \cdot \hat{\boldsymbol{A}}$。其次，我们使这些投影在 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 之间对称，从而得出定义$$\mathbf{A}\cdot\mathbf{B}\equiv A_{B}B=AB_{A}=AB\cos\theta.\tag{1.25}$$
+
+
 
 
 $\boldsymbol{A}$
