--- a/数学物理方法/一、向量分析/1.3 标量积或点积.md
+++ b/数学物理方法/一、向量分析/1.3 标量积或点积.md
@@ -14,8 +14,14 @@
 因此$$\mathbf{A} \cdot \mathbf{B} \equiv \sum_{i} B_{i} A_{i}=\sum_{i} A_{i} B_{i}=\mathbf{B} \cdot \mathbf{A} .\tag{1.24}$$如果在方程（1.24）中 $\boldsymbol{A}=\boldsymbol{B}$，那么我们可以从方程（1.24）中恢复出方程（1.6）中 $\boldsymbol{A}$ 的大小 $A=\left( \sum A_{i}^2 \right)^{1/2}$。
 
 由式 (1.24) 可知，标量积对 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 的处理方式相同，或者说在 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 之间是对称的，并且是可交换的。因此，我们也可以采用另一种等价的方式：首先将式 (1.22) 推广为向量 $\boldsymbol{A}$ 在非零向量 $\boldsymbol{B}$ 方向上的投影 $A_B = A \cos θ ≡ \boldsymbol{A} \cdot \hat{\boldsymbol{B}}$，其中 $\hat{\boldsymbol{B}}=\frac{\boldsymbol{B}}{B}$ 是 $\boldsymbol{B}$ 方向的单位向量，$θ$ 是 $\boldsymbol{A}$ 与 $\boldsymbol{B}$ 之间的夹角，如图 1.7 所示。同理，我们将 $\boldsymbol{B}$ 投影到 $\boldsymbol{A}$ 上得到 $B_A = B \cos θ ≡ \boldsymbol{B} \cdot \hat{\boldsymbol{A}}$。其次，我们使这些投影在 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 之间对称，从而得出定义$$\mathbf{A}\cdot\mathbf{B}\equiv A_{B}B=AB_{A}=AB\cos\theta.\tag{1.25}$$
+式（1.23a）中的分配律在图 1.8 中得到了说明，该图表明 $\boldsymbol{B}$ 和 $\boldsymbol{C}$ 在 $\boldsymbol{A}$ 上的投影之和 $B_A + C_A$ 等于$\boldsymbol{B}+\boldsymbol{C}$ 在 $\boldsymbol{A}$ 上的投影 $(\boldsymbol{B}+\boldsymbol{C})_{A}$。
 
+根据方程（1.22）、（1.24）和（1.25）可知，坐标单位向量满足以下关系$$\hat{\mathbf{x}} \cdot \hat{\mathbf{x}} = \hat{\mathbf{y}} \cdot \hat{\mathbf{y}} = \hat{\mathbf{z}} \cdot \hat{\mathbf{z}} = 1,\tag{1.26a}$$和$$\hat{\mathbf{x}} \cdot \hat{\mathbf{y}} = \hat{\mathbf{x}} \cdot \hat{\mathbf{z}} = \hat{\mathbf{y}} \cdot \hat{\mathbf{z}} = 0,\tag{1.26b}$$
+如果将分量定义式（1.24）称为代数定义，那么式（1.25）就是几何定义。标量积在物理学中最常见的应用之一是计算 $功=力·位移·\cosθ$，其物理含义是位移乘以力在位移方向上的投影分量，即力与位移的标量积 $\boldsymbol{W} = \boldsymbol{F}·\boldsymbol{S}$。
 
+如果 $\boldsymbol{A}·\boldsymbol{B}=0$，并且我们知道 $\boldsymbol{A}\neq 0$ 和 $\boldsymbol{B}\neq 0$，那么根据方程（1.25），$\cos θ = 0$，即 $θ = 90$°、￥$270$° 等等。向量 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 必须互相垂直。或者，我们可以说 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 是正交的。单位向量 $\hat{\boldsymbol{x}}$、$\hat{\boldsymbol{y}}$ 和 $\hat{\boldsymbol{z}}$ 是相互正交的。为了进一步展开正交性的概念，假设 $\boldsymbol{n}$ 是一个单位向量，而 $\boldsymbol{r}$ 是 $xy$ 平面中的一个非零向量；即 $\boldsymbol{r}=\hat{\boldsymbol{x}}x+\hat{\boldsymbol{y}}y$（图 1.9）。如果$$\boldsymbol{n} \cdot \boldsymbol{r}=0$$对于所有 $\boldsymbol{r}$ 的选择，$\boldsymbol{n}$ 必须垂直于 $xy$ 平面。
+
+通常用带下标的单位向量 $\boldsymbol{e}_{m},\,m=1,2,3$ 来代替  $\hat{\boldsymbol{x}}$、$\hat{\boldsymbol{y}}$ 和 $\hat{\boldsymbol{z}}$  会更方便，其中 $\hat{\boldsymbol{x}}=\boldsymbol{e}_{1}$，以此类推。这样，方程（1.26a）和（1.26b）就变为$$\boldsymbol{e}_{m} \cdot \boldsymbol{e}_{n}=\delta_{mn} \tag{1.26c}$$当 $m \neq n$ 时，单位向量 $\boldsymbol{e}_{m}$ 和 $\boldsymbol{e}_{n}$ 是正交的。当 $m = n$ 时，每个向量都被归一化为单位长度，即具有单位大小。集合 $\boldsymbol{e}_m$ 被称为正交归一化的。与方程（1.26a）和（1.26b）相比，方程（1.26c）的一个主要优势在于它可以很容易地推广到 $N$ 维空间：$m,n = 1, 2, . . . , N$。最后，我们选择正交归一化的单位向量集 $\boldsymbol{e}_{m}$ 是为了方便——这是一种极大的便利。
 
 
 $\boldsymbol{A}$
