--- a/理论物理/任延宇/理论力学.md
+++ b/理论物理/任延宇/理论力学.md
@@ -138,8 +138,41 @@ $$\vec{r}=r\vec{e}_r$$
 
 那么以上，就是我们对于牛顿三定律的一些说明，希望同学们在以后处理问题的时候，要稍加注意。我们今天的课程就到这里。
 
-## 8、
+## 8、相对性原理
 
+各位同学们好，这堂课我们来讲相对性原理，这堂课的内容要用到一些相对论以及电磁学的知识，那么缺少这部分基础的同学完全可以直接看下一节，不会影响后续课程的学习。
+
+那么接下来我们来具体的做讲述，我们都知道牛顿力学作为经典物理的基础，它有三个理论上的基石：首先是著名的牛顿三定律以及万有引力定律，再有就是所谓的绝对时空观。这也是绝大多数人们所持有的一个时空观，那么以此为基础，人们不难得到一个重要的结论，也就是说所谓的*力学规律*，不管你在哪个惯性系下看，它都是等价的。也就是说无论你是坐着看一个物体的运动，还是跑着看一个物体的运动，都可以用牛顿的三定律来解释，这些公式的形式不需要发生任何变化，这个相对性原理，也就是著名的伽利略或者牛顿给出的相对性原理。
+
+但是时间进入二十世纪，又一个伟大的科学家横空出世，他给人们带来的是思想上的一个剧烈的变化，人们对于时空的认识发生了根本性的改变，也就是说相对论力学它诞生了。我们都知道相对论力学，它也有它的两个最基本的假设：第一个是光速不变，另外一个就是爱因斯坦的相对性原理。
+
+爱因斯坦的相对性原理，我们可以把它看成是伽利略相对性原理的一个升级版本，他认为所有的 *物理规律*，对于惯性系来说都是等价平权的，这也就意味着他实际把之前的力学规律扩展到了所有的物理规律，那么回想一下，实际上我们在之前学习相对论的时候，更多的是把注意力放到了爱因斯坦的第一个基本假设，也就是光速不变，因为以此为基础，我们可以得出洛伦兹的变换公式，得到什么时缓、尺缩等等等等效应。
+
+而我们这门课针对的是他的第二个基本假设，也就是爱因斯坦的相对性原理，这个原理告诉我们，不管是什么样的物理规律，你采用不同的惯性系，它的形式不需要发生任何变化，如果发生了一点变化，显然你可以根据这个变化把惯性系分出个三六九等，但是爱因斯坦认为这是不符合物理的，没有一个特殊的惯性系存在，当然我们的讲述，这个所谓的物理规律就以我们同学目前学到的那些物理规律开始讲起。那么作为物理系大二的同学，实际我们学的所有物理规律都是在经典物理这样一个框架范围内，具体它包括经典的力学，实际上牛顿和伽利略认为这些公式在不同的参考系下形式是不变的，这也就意味着，爱因斯坦的扩充对于我们同学来讲，就是电磁学的公式。
+
+爱因斯坦认为，你采用不同的惯性系来描述一个带电体的运动，完全可以仍然使用这些公式，形式不需要做任何改变，那么在具体的讲解爱因斯坦的工作之前，首先让我们来欣赏一下这些公式，这些公式的个数虽然不多，形式也足够简单，但是原则上却可以处理所有的宏观物体的运动，那么正像鲁迅先生所说的，他说人类血战前行的历史正如煤的形成，当时用了大量的木材，可结果却只是一小块，很显然，人类血战前行的历史，自然也包括对未知世界探索的历史，当时无数的科学家花费了毕生的精力，最终积累下来的却只有这么一点公式，但是这些公式已经不再是木材了，而是宝贵的煤炭，它可以处理各式各样经典物体的运动。
+
+比方说我们同学现在人手一部手机，有的说我这是三星科技，我那是华为的，其实本质上无外乎都来自于著名的麦克斯韦方程数，而爱因斯坦的工作室，他告诉我们，这些公式你不管在什么样的惯性系去看，它的形式都是固定不变。
+
+那么看起来这只是一个很简单的扩充，但是仔细想起来，它并没有这么简单，为什么呢？我们可以举一个例子，比方说你观察一个物体在做一个某种复杂的运动，当然它的速度不是很快，你完全可以用 $F=ma$ 来描述的，这是对于我站着来描述，如果同学们跑着看同样这样一个物体的运动，那么爱因斯坦告诉我们，你照样可以用 $F=ma$，当然前提你得匀速的跑，意味着你也是一个惯性系，当然不同的惯性系，我和你看到它的加速度应该是一样的，那么这也就意味着，如果我们同样想描述这个物体的运动，我们所得到的那个力，也应该是同样大小。
+
+$$\vec{F}_{\text{电磁}}=q(\vec{E} + \vec{v} \times \vec{B})$$
+
+有同学说这有什么问题吗，引力难道不就这样吗，但是不要忘了，一旦我们把问题扩充到电磁学领域，这里边的电磁力公式里赫然出现了一个速度 $v$，那么这个速度 $v$ 无疑是相对于我们观察者的，也就是我站着看和你跑着看这个物体的运动，它的速度是不一样的，因此根据爱因斯坦所说的，你仍然用这些公式来描述它的加速度的时候，这个时候你在跑着看起来，你得到的速度就不再是我得到的速度。那么依次带入这个方程里，你得到这个 $F$，就不是我得到这个 $F$，那么还想同样描述它一样的加速度，好像要出问题，那么事情究竟是不是这样呢？
+
+为了进一步说明这个问题，我们来举一个更为实际的、更为具体的一个例子，好，回顾一下我们的任务，我们的任务要阐明，无论你是坐着还是跑着，这些公式的形式不需要任何变化，我们必须以此为前提来解释，我现在给出同学们的一个实验现象，比方说这有一个不带电的导线通以电流，既然它不带电，意味着这里边正负电荷的密度是相等，我们都把它称之为 $ρ$，那么既然通以电流，它就会在导线的周围产生如下的磁场。
+
+好，现在我让一个带电体，它的电荷为 $q$ 以这样一个水平方向的速度进入到这个系统里，那么很显然，这个时候我们学过电磁学的同学都知道，它会受到一个向下的磁场力的作用，那么也就意味着，它以此力为基础，下边要获得一个向下的加速度，也就意味着过不了多少时候，它可能就会打到我们预先给的那个导线上，当然这个问题同学们之前的电磁学课里，我相信已经计算过很多遍了，但是不要忘了，我们当时可是坐着算，这意味着你是处在一个静止的参考系，那么现在我如果让你跑起来再算这个问题，你还能不能用以上这些公式去解释它呢？
+
+恐怕就会有一些问题，比方说现在我们想给爱因斯坦设置一个比较大的难题，我换一个参考系去看同样的这件事情，那么之所以要给他制造一些麻烦，就在于我们换的这个 SEP 参考系不但跑起来，而且我们要求它跑的速度和这个电荷的速度是一边快的，同学们不妨想一下，在这样一个参考系，你最终看到的结果是什么，我想排除所有的疑问，你最终看到的结果肯定是，这个带电物体一样会获得向下的加速度，过不了多少时候它同样会打在这个导线上，道理很简单，因为一个物理事实跟你是坐着看还是跑着看没有任何关系，我们要做的只是解释，为什么当你以同样的速度 $v$ 跑起来，它仍然会获得向下的加速度，因为困难是很显然的。
+
+因为如果你跑着也以速度 $v$ 看这个带电体的话，它就没有速度了，它就是静止过来的，如果没有速度，你还要用这个公式去解释它的行为，它就不再受磁场力的作用，那么是什么力给它获得向下的加速度呢？如果你解释不了这个事情，意味着在跑起来这个惯性系下看，这些物理公式可能要发生变化，而一旦变化，爱因斯坦的假定也就错了，意味着各个惯性系不再是等价的，为了解释这个麻烦事，我们不妨假设，它这个未知的这个 $F$ 可能来自于电场力，换句话说，有可能在你跑起来看，这里边的正负电和密度就不再一样，事情会是这样吗？
+
+肯定是如此！因为我们不要忘了，爱因斯坦的相对论有两条基本假设，除了它的相对性原理，还有一个光速不变，那么光速不变可以得到一个尺缩的效应，如果你跑起来看的话，正负电荷都会发生不同程度的尺缩，而一旦发生尺缩的话，它的密度跟你坐着看的人就是不一样的，由于它有电流存在，意味着正负电荷运动的速度是不等的，因此它们的尺缩程度肯定是不一样的，正是因为如此，你跑起来看的人来讲，这就变成了一个带电的导线，意味着他获得的将是一个电场力。
+
+那么说到这儿，我相信有些同学肯定会有疑问，因为我们这个电荷的速度没有必要特别的大，我们在相对论里都学过，只有速度接近于光速的时候才需要考虑尺缩，但是不要忘了从另外一个角度来讲，电磁场，也就是电磁力的强度是非常非常强的，任何一个正负电和微小的不等，都会产生一个明显的电磁力，同学们课下可以做一个简单的计算，如果我们两个同学相距一米，其中我们每个同学身上如果有一亿个电子，一亿个拿走一个的话，你们这两个同学间的相互的排斥力，将远远超过一艘航空母舰的重量，电磁力就是这样可怕，因此哪怕是非常不明显的尺缩，也会产生宏观上明显的力的效应。
+
+那么接下来，为了使同学们更加相信我所说的话，我们将在黑板上给大家做一下定量的计算，好同学们咱们回到黑板，回想一下，根据爱因斯坦的相对性原理 他说这些公式是适用于所有惯性系的 那么本着这个精神 我们是要考察一个关于一个运动的正电和 在磁场里的行为 我们发现碰到了一点麻烦 也就是说在同样速度的S1'系下来看 这个电荷它就变成静止 因此根据我们刚才的分析 为了使它获得也同样的向下的加速度 唯一的可能性就是由于齿缩效应 那么在这样一个'的参考系下 这个柔正和柔负就不再一样了 为了使同学们更加相信这一点 我们这里给大家定量计算一个特例 这个特例是说 好比现在导线里这个电流 是由正电荷运动而引起的 这个时候负电荷静止 而且这个特例是说 正电荷它的运动速度也是v 那么这样一来 这里边的电流强度i 就应该等于这个ρ乘上v 那么首先在这个特例下 我们先完成最简单的S系下 这个受力的计算 那么关于S系这个磁场力 我相信同学们以前在电磁学课里 已经算过很多遍了 我们简单的来回忆一下 那么好 首先在这个S系下 它受到的应该是一个磁场力 那么根据陆伦兹力公式 它应该等于qvb 关于这个b的计算 满足一个安培环路定理 也就是说它应该等于μ0i 再比上一个2πr 那么好 关于现在的这个题目 我们来考察一下现在这个结果 这个i我们已经说了 它等于ρv 那么这个μ0 回想一下我们之前电磁学里课程的介绍 有这样一个结果 也就是μ0ε0乘上c² 应该等于1 因此这个μ0 我们又可以化成ε0c² 这个就是关于磁场力最后的结果 我们看看在新的SE皮尔系里 能不能同样对上这个结果 那么根据我们刚才的猜测 我们现在要想使它受到一个电场力 而且有一个前提 我们在接下来做所有计算的时候 都要用这些公式 它的形式不能允许做任何的改变 也就意味着这个电场力同样应该等于qe 那么计算e的时候 我们同样要用这个高斯定理 它们俩的形式不但要采用 而且不该有任何的变化 接下来我们来具体的做计算 好根据我们刚才的约定 现在这个电场力 它应该等于qe 那么根据高斯定理 只要你做一个高斯面 就可以算出这个时候的电场强度 当然这里边还要用到这个r 和这个r是一样的 它只是竖直方向上 这个电荷到导线的距离 这个距离是不会因为水平方向速度 引起的坐标系的变化而改变的 也就是说 现在这个e应该等于 正负电荷密度的差 然后再除上2πε0 乘上同样的r 那么好 现在我们就来计算这个Δρ 根据我们的猜测 在这样一个新的参考系下 ρ正和ρ负变得不再一样 那么具体的 同学们不妨考虑一下 在原来的参考系下 负电荷静止 而在达比尔这个新的参考系下来看 现在这个负电荷要以速度v 往左运动 因此就会产生一个齿缩效应 而齿度的收缩 就会使得这个ρ变大 也就是说现在这个ρ负 应该等于一个γ音子 再乘上ρ 那么关于γ音子的定义 相信同学们都很熟悉这个是我们在普通力学里相对论部分学过的内容 那么接下来同样道理 再来看这个ρ正一片 原来这个ρ正正电荷是以速度v运动的 也就是说我们实际在一个静止的参考系下来看 已经是一个齿缩了的正电荷 但是现在 由于ρ正一片系 现在和正电荷运动的速度完全一样 它看到的是正电荷正常的密度 换句话说 现在关于ρ正一片 情况完全相反 它应该等于γ分之一再乘上一个ρ 那么这样一个结果 我们同时提出一个γρ 那么余下来的部分 就应该是 v² 比上c² 这样我们就把δρ具体的给定量计算出来 接下来我们把这个结果带入到上面这个公式 那么带入到最后的结果 同学们不妨自己练习一下 我们就可以得到 原来你在s一片系下 的确会受到一个电场力 它和我们在s系下 受到的这个磁场力相比 好像还不完全一样 差的恰好是这样一个γ因子 我们来分析一下这个结果 在我们日常生活里 遇到的速度都不会很大 那么这意味着 在不同的参考系下 看到的向下的这个力应该是一样的 因此会引起同样大的加速度 这符合我们的日常判断 那么如果情况比较特殊 我们现在碰到的 这两个参考系间的速度很大很大 以至于已经接近了光速 这个时候γ可就要比一大得多 好像这两个参考系下的力就不一样 但是没有关系 熟悉相对论的同学们会知道 在那样一个速度差下 两个不同惯性系下 向下的力本身恰好也会差一个γ 只有这样才能保证 它们竖直向下 动量的改变是一样的 那么通过这样一个特例 实际上我们并不能真正给同学们 去证明相对性原理是正确的 因为原理本身是无可证明的 我们只是通过这样一个 看似相对性原理 好像要出问题的这样一个例子 使同学们更加的去坚信这样一个原理 进而体会我们大自然的一个和谐之美 好 我们今天的课程就上到这里
 
 
 P10  质点运动的微分方程 例1
