--- a/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
+++ b/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
@@ -40,6 +40,8 @@
 
 将公式 (31.2) 代入得$$T=\sum \frac{m}{2}(\boldsymbol{V}+\boldsymbol{\Omega} \times \boldsymbol{r})^{2}=\sum \frac{m}{2} V^{2}+\sum m \boldsymbol{V} \cdot(\boldsymbol{\Omega} \times \boldsymbol{r})+\sum \frac{m}{2}(\boldsymbol{\Omega} \times \boldsymbol{r})^{2}$$对刚体的所有质点 $\boldsymbol{V}$ 和 $\boldsymbol{\Omega}$ 都相同，所以在第一项中 $V^2/2$ 可以移到求和号之外，$\sum m$ 是刚体的质量，我们用 $μ$ 表示。第二项写成$$\sum m \boldsymbol{V} \cdot(\boldsymbol{\Omega} \times \boldsymbol{r})=\sum m \boldsymbol{r} \cdot(\boldsymbol{V} \times \boldsymbol{\Omega})=\boldsymbol{V} \times \boldsymbol{\Omega} \cdot \sum m \boldsymbol{r}$$由此可见，如果坐标原点选在刚体质心，则由 $\sum m \boldsymbol{r}=0$，故这一项等于零，最后，我们展开第 3 项中矢量积的平方，结果得$$T=\frac{\mu}{2} V^{2}+\frac{1}{2}\sum m\left[\Omega^{2} r^{2}-(\boldsymbol{\Omega}\cdot\boldsymbol{r})^{2}\right]$$
 > [!tip]
+> 质心坐标 $R=\left( \sum m_{i}\boldsymbol{r}_{i} \right)/\sum m_{i}$
+> 
 > $(a \times b)^2 = (a \times b) \cdot (a \times b)$ 这等于该向量模长的平方：$(a \times b)^2 = |a \times b|^2=|a|^2|b|^2 \sin^2\theta$，又因为 $\sin^2\theta = 1 - \cos^2\theta$，且 $a \cdot b = |a| \, |b|\,\cos\theta$，所以：$(a \times b)^2 = a ^2 b^2 - (a \cdot b)^2$，这是一个很常用的公式。
 > 
 
