--- a/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
+++ b/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
@@ -84,103 +84,63 @@ T_{\text{rot}} &= \frac{1}{2} \sum m\left[\Omega_{i}^{2} x_{l}^{2}-\Omega_{i} x_
 
 a) 分子由位于一条直线上的原子构成。
 
-**答案：**$$I_{1}=I_{2}=\frac{1}{\mu}\sum_{a\neq b}m_{a}m_{b}l_{ab}^{2},\quad I_{3}=0,$$
+**答案：**$$I_{1}=I_{2}=\frac{1}{\mu}\sum_{a\neq b}m_{a}m_{b}l_{ab}^{2},\quad I_{3}=0,$$其中 $m_a$ 是第 $a$ 个原子的质量，$l_{ab}$ 是原子 $a$ 和 $b$ 之间的距离，求和是对分子中的所有原子对进行的，每个原子对 $a$ 和 $b$ 的值在求和中仅出现一次。
 
+对于双原子分子，求和中只有一项，结果是显然的，即两个原子的约化质量乘以它们之间的距离的平方：$$I_{1}=I_{2}=\frac{m_{1} m_{2}}{m_{1}+m_{2}}l^{2}.$$
+b) 形状为等腰三角形的 3 原子分子（图 36）
 
+**答案：** 质心位于三角形的对称轴上，距底边为 $X_{2}=m_{2}h/\mu$，$h$ 是三角形的高。转动惯量为$$I_{1}=\frac{2m_{1}m_{2}}{\mu}h^{2},\quad I_{2}=\frac{m_{1}}{2}a^{2},\quad I_{3}=I_{1}+I_{2}$$
+c) 4 原子分子，原子位于正三棱锥的顶点（图 37）
+
+**答案：** 质心位于三棱锥的对称轴上，距底面为 $X_3 =m_2h/\mu$，$h$ 是正三棱锥的高。转动惯量为$$I_{1}=I_{2}=\frac{3 m_{1}m_{2}}{\mu} h^{2}+\frac{m_{1}}{2} a^{2},\quad I_{3}=m_{1}a^{2}.$$当 $m_1 = m_2, h = a \sqrt{2/3}$ 时，这是正四面体分子，转动惯量为$$I_1 = I_2 = I_3 = m_1 a^2$$
+
+----
+
+**习题 2**：试求下列均匀连续体的主转动惯量
+
+a) 长为 $l$ 的细长杆
+
+**答案：**
+$$I_{1}=I_{2}=\mu l^{2}/12,\quad I_{3}=0 \quad\text{(杆的粗细忽略不计)}$$
+b) 半径为 $R$ 的球体
+
+**答案：** $$I_{1}=I_{2}=I_{3}=\frac{2}{5}\mu R^{2}$$（通过计算 $I_{1}+I_{2}+I_{3}=2\rho\displaystyle\int r^{2}\mathrm{d}V$ 求出）．
+
+c) 半径为 $R$ 高为 $h$ 的圆柱体
+
+**答案：**$$I_{1}=I_{2}=\frac{\mu}{4}\left(R^{2}+\frac{h^{2}}{3}\right),\quad I_{3}=\frac{\mu}{2}R^{2}$$（圆柱轴为 $X_3$ 轴）．
+
+d) 棱边为 $a,b,c$ 的长方体．
+
+**答案：** $$I_{1}=\frac{\mu}{12}(b^{2}+c^{2}),\quad I_{2}=\frac{\mu}{12}(c^{2}+a^{2}),\quad I_{3}=\frac{\mu}{12}(a^{2}+b^{2})$$（$X_1, X_2, X_3$ 轴分别平行于棱边 $a, b, c$）
+
+e) 高为 $h$ 底面半径为 $R$ 的圆锥体．
+
+**解：** 首先相对于以圆锥顶点为原点的坐标轴（图 38），计算张量 $I_{ik}'$，用柱坐标很容易计算得$$I_{1}^{\prime}=I_{2}^{\prime}=\frac{3}{5}\mu\left(\frac{R^{2}}{4}+h^{2}\right),\quad I_{3}^{\prime}=\frac{3}{10}\mu R^{2}.$$经过简单的计算可知，质心位于圆锥轴上，距离顶点 $a=3h/4$，根据公式 (32.12) 因而可得$$\begin{align}
+&I_{1}=I_{2}=I_{1}^{\prime}-\mu a^{2}=\frac{3}{20}\mu\left(R^{2}+\frac{h^{2}}{4}\right) \\[1.2ex]
+&I_{3}=I_{3}^{\prime}=\frac{3}{10}\mu R^{2}.
+\end{align}$$
+f) 半轴为 $a,b,c$ 的三轴椭球体．
+
+**解：** 质心与椭球中心重合，惯量主轴与椭球主轴重合，用坐标变换 $x=a\xi,\quad y=b\eta,\quad z=c\zeta$，将椭球方程$$\frac{x^{2}}{a^{2}}+\frac{y^{2}}{b^{2}}+\frac{z^{2}}{c^{2}}=1$$变为单位球方程$$\xi^{2}+\eta^{2}+\zeta^{2}=1$$通过这个坐标变换可将对椭球体的体积积分转化为对圆球体的体积积分。
+
+例如，对 $x$ 轴的转动惯量为$$\begin{align}
+I_{1}&=\rho\iiint\left(y^{2}+z^{2}\right)\mathrm{d}x\mathrm{~d}y\mathrm{~d}z=\rho abc\iiint\left(b^{2}\eta^{2}+c^{2}\zeta^{2}\right)\mathrm{d}\xi\mathrm{d}\eta\mathrm{d}\zeta \\[1.2ex]
+&=\frac{abc}{2}I'\left(b^{2}+c^{2}\right)
+\end{align}$$其中 $I'$ 是单位球的转动惯量。
+
+考虑到椭球体积等于 $4 \pi abc/3$，最后可得转动惯量$$I_{1}=\frac{\mu}{5}(b^{2}+c^{2}),\quad I_{2}=\frac{\mu}{5}(a^{2}+c^{2}),\quad I_{3}=\frac{\mu}{5}(a^{2}+b^{2})$$
+**习题 3**：试求物理摆（在重力场中绕着固定的水平轴摆动的刚体）的微振动频率．
+
+**解：** 设 $l$ 为刚体质心到转动轴的距离，而 $\alpha, \beta, \gamma$ 是惯量主轴与转动轴之间的夹角，从质心作垂线到转动轴，它与竖直方向夹角 $\varphi$ 作为坐标变量，质心速度为 $V=l \dot{\varphi}$，而角速度在主轴上投影为 $\dot{\varphi} \cos \alpha,\dot{\varphi} \cos \beta,\dot{\varphi} \cos \gamma$，假设 $\varphi$ 很小，求得势能
 
 
 \boldsymbol{R}
 
 
 
-其中ma 是笫a 个原子的质量， lab 是原子a 和b 之间的距离，求和是对分子中的
-所有原子对进行的，每个原子对a 和b 的值在求和中仅出现一次．
-对于双原子分子，求和中只有一项，结果是显然
-的，即两个原子的约化质量乘以它们之间的距离的
-平方：
-I1=I2=
-m1 m2,2
-l.
-m1 + m2
-b) 形状为等腰三角形的3 原子分子（图36).
-答案：质心位于三角形的对称轴上，距底边为
-兑＝ m2hlμ,h 是三角形的高转动惯量为
-m1
-2m1m2,2,_m1 2
-I 1 = --------=------h L, I 2 = ----;:;-'- a L, I 3 = I 1 + I 2.
-μ 2
-c) 4 原子分子，原子位于正三棱锥的顶点（图37).
-答案：质心位于三棱锥的对称轴上，距底面为X3 =
-m2hlμ,h 是正三棱锥的高转动惯量为
-I1 = I2 =
-3m1 m2, 2, m1 2, _ 2
-h +—
-μ 2
-a ，儿＝ m1aL.
-当m1 = m2, h = a ✓百乃时，这是正四面体分子，转动惯量
-为
-I1 = I2 = l3 = m1 正．
-习题2 试求下列均匀连续体的主转动惯量．
-a) 长为l 的细长杆．
-答案：
-m1
-! X2
-图36
-m2
-图37
-I1=I2=μ 广／ 12,
-b) 半径为R 的球体．
-J3 = 0 （杆的粗细忽略不计）．
-答案：
-I1 = I2 = I3 = t μ R2
-（通过计算I1 + I2 + I3 = 2p』产dV 求出）．
-c) 半径为R 高为h 的圆柱体．
-答案：
-I1=I2= 牛（矿＋气），
-（圆柱轴为X3 轴）．
-d) 棱边为a,b,c 的长方体．
-I 尸且矿
-2
-ml
-m1
-§ 32 惯量张量· 105 ·
-答案：
-I1 =卢（矿＋产）， I2 =卢（ c2 + a2), I 3 二卢(a2 +炉）
-(X1'Xz'X3 轴分别平行于棱边a, b, c).
-e) 高为h 底面半径为R 的圆锥体．
-解：首先相对于以圆锥顶点为原点的坐标轴（图38) ，计算张量Il,K ．用柱坐标
-很容易计算得
-片＝片＝
-3 I R2 了卢＋ h2) I3 飞μ R2
-经过简单的计算可知，质心位于圆锥轴上，距离顶点
-a= 3h14 ．根据公式(32.12) 因而可得
-I1=I2=Ii —μ a2= 如（矿＋ t)
-I3 = I3 = 3
-3-10μ R2.
-f) 半轴为a,b,c 的三轴椭球体．
-解：质心与椭球中心重合，惯量主轴与椭球主轴重斗
-合．用坐标变换x = af, y = br;, z = cs 将椭球方程
-变为单位球方程
-2 2 2
-王＋ y ＋气＝ 1
-a2 · b2 · c
-f2 +沪＋ S2 = 1.
-图38
-通过这个坐标变换可将对椭球体的体积积分转化为对圆球体的体积积分．
-例如，对x 轴的转动惯量为
-I1 = p 』TI (y2 + z2)dxdydz = pabc l』(b2 沪＋ c2 s2)dfd 识
-= a:C I' （矿＋产），
-其中I' 是单位球的转动惯量．
-考虑到椭球体积等于4 亢abc/3 ，最后可得转动惯量
-I1=y(b2+c2), I2=f(az+c2), 儿＝且(a2 +炉）
-5
-习题3 试求物理摆（在重力场中绕着固定的水平轴摆动的刚体）的微振动
-频率．
-解：设l 为刚体质心到转动轴的距离，而a,/3 ， y 是惯量主轴与转动轴之间
-的夹角．从质心作垂线到转动轴，它与竖直方向夹角中作为坐标变量．质心速度
-为V= l <p ，而角速度在主轴上投影为令cosa ，令cos/3 ，令cosy ．假设p 很小，求得势
-· 106 · 第六章刚体的运动
-能
+
+
 U = μgl (1 - cos<p ）叶½μgl 忒
 所以拉格朗日函数为
 L=f 矿+ ; ( I 1 cos2 a + I 2 cos2(3+l3cos2 Y ）矿—罕<p2
